test/expected/cli/shitbox_misc.out
--- sleep zero ---
rc=0
--- sleep bad duration ---
shit: 1:1: error: sleep: invalid duration 'abc'.
     1 |  shitbox sleep abc
       |  ^~~~~~~~~~~~~~~~~ here.
rc=1
--- env runs the command ---
ran
rc=0
--- env applies the assignment ---
SHITBOX_TESTVAR=present
--- pkill with no pattern ---
shit: 1:1: error: pkill: Not enough arguments.
     1 |  shitbox pkill
       |  ^~~~~~~~~~~~~ here.
shit: note: pkill --help for more info.
rc=2
--- pkill with no match ---
rc=1
--- killall with no match ---
shit: 1:1: error: killall: no_such_process_xyz_123: no process found.
     1 |  shitbox killall no_such_process_xyz_123
       |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ here.
rc=1
--- kill with no pid ---
shit: 1:1: error: kill: Not enough arguments.
     1 |  shitbox kill
       |  ^~~~~~~~~~~~ here.
shit: note: kill --help for more info.
rc=2
--- kill with a non-numeric pid ---
shit: 1:1: error: Builtin 'kill': 'notapid' is not a valid job or process id.
     1 |  shitbox kill notapid
       |  ^~~~~~~~~~~~~~~~~~~~ here.
rc=1
--- ps prints the header ---
  PID CMD
rc=0
--- list prints the utility count ---
      33
